properly shaped db structure and the app
